log
ju.,  7 de abr. de 2022 12:37:43: 
 tests:  0|6
total_score: 0/70
10c1b69
ju.,  7 de abr. de 2022 12:42:04: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
5ee7ba5
ju.,  7 de abr. de 2022 12:44:57: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
7c29ed8
ju.,  7 de abr. de 2022 12:51:49: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
6806987
ju.,  7 de abr. de 2022 13:18:40: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:46:42: error: invalid operands to binary - (have 'Pair * {aka struct Pair *}' and 'char *')
         if(is_equal(key,map->buckets[idx]-key) == 1)return;
                         ~~~~~~~~~~~~~~~~~^
hashmap.c:51:9: error: expected ';' before 'map'
         map->buckets[idx]->value = value
         ^~~
hashmap.c:54:5: error: expected ';' before 'map'
     map->size += 1;
     ^~~
Compilation failed
41aa668
ju.,  7 de abr. de 2022 13:19:25: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:54:5: error: expected ';' before 'map'
     map->size += 1;
     ^~~
Compilation failed
4e9fccc
ju.,  7 de abr. de 2022 13:19:38: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
f853ab6
do., 10 de abr. de 2022 21:33:35: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
4b4156b
